platforms/drm: add outputs on EglGbmBackend initialisation

BUG: 437761